--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -154,7 +154,7 @@ Onde:
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{./figs/classificacao_3.jpg}
-	\caption{Representação do autovetor (em vermelho), dos eixos da imagem (em amarelo) e do eixo do objeto (em azul).}
+	\caption{Representação do autovetor (vermelho), dos eixos da imagem (amarelo) e do eixo do objeto (azul).}
 	\fonte{Autoria própria}
 	\label{fig:desenv_class3}
 \end{figure}
