--- a/inicio.tex
+++ b/inicio.tex
@@ -68,7 +68,7 @@ The objective of this work is to develop a system capable of classifying metalli
 %O objetivo deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina. 
 The project development is divided into three steps. The first step is the study of techniques for image segmentation and implementation in Matlab software. The second step is the study of techniques for image description and also implementation in Matlab. Finally, in the third step a set of neural networks capable of classifying objects and measuring their angle is implemented using Matlab.
 %O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software Matlab. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no Matlab. Finalmente, na terceira etapa é implementado no Matlab um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo. 
-For each step in the project development a spiral development methodology was adopted. In each cycle of the methodology new features are aggregated to the system. In order to test the system a test environment is developed, where specifically selected objects are placed automatically, allowing the capture of images of the object in different angular positions.
+For each step in the project development a spiral development methodology is adopted. In each cycle of the methodology new features are aggregated to the system. In order to test the system a test environment is developed, where specifically selected objects are placed automatically, allowing the capture of images of the object in different angular positions.
 %Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema. Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
 The system is divided into three modules: segmentation, description, and classification of objects. After capturing an image of the object being classified, the segmentation module selects the region of interest from the image. In the description module features are extracted from the region of interest, forming a descriptor that is provided to the third module. The third module then classifies the object and measures its angular orientation.
 %O sistema é dividido em três módulos: segmentação, descrição e classificação dos objetos. Após a aquisição da imagem do objeto a ser classificado o módulo de segmentação seleciona a área de interesse da imagem. No módulo de descrição são extraídas características da área de interesse da imagem, formando um descritor que é fornecido ao terceiro módulo do sistema que classifica o objeto e mede a sua respectiva orientação angular. 
