--- a/introducao.tex
+++ b/introducao.tex
@@ -1,4 +1,4 @@
-%---------- Primeiro Capitulo ----------
+%---------- Primeiro capítulo ----------
 \chapter{Introdução}
 
 % Por que classificar objetos
@@ -56,4 +56,4 @@ Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde
 
 Esta monografia está dividida em cinco capítulos: o primeiro corresponde à introdução, na qual são
 apresentadas a motivação, os objetivos e a metodologia empregada. O segundo capítulo contém a fundamentação
-teórica do projeto, ou seja, o estudo das técnicas e algoritmos utilizados durante o trabalho. Nesse capitulo são abordados técnicas de segmentação de imagens, de descrição e de classificação de imagens. O terceiro capítulo apresenta o desenvolvimento do projeto, detalhando cada parte do sistema desenvolvido. O quarto capitulo apresenta o ambiente de testes desenvolvido para validar o sistema, os testes efetuados e os resultados obtidos. Finalmente o quinto capítulo contém considerações finais sobre o projeto.
+teórica do projeto, ou seja, o estudo das técnicas e algoritmos utilizados durante o trabalho. Nesse capítulo são abordados técnicas de segmentação de imagens, de descrição e de classificação de imagens. O terceiro capítulo apresenta o desenvolvimento do projeto, detalhando cada parte do sistema desenvolvido. O quarto capítulo apresenta o ambiente de testes desenvolvido para validar o sistema, os testes efetuados e os resultados obtidos. Finalmente o quinto capítulo contém considerações finais sobre o projeto.
